# TaxWeave-Atlas

./: .gitignore  README.md  pyproject.toml
config/: application.yaml
config/generator/: complexity.yaml  computation.yaml  mix.yaml  pools.yaml
config/reconciliation/: credits.yaml  cross_checks.yaml  scope.yaml  structural_mef.yaml
config/tax_rules/: federal.yaml  state.yaml
dataset/1. Client Summary-20260402T123216Z-1-001/1. Client Summary/: Client Summary.docx
dataset/2. Input Documents-20260402T123218Z-1-001/2. Input Documents/: Tax Document Attachments Summary.docx
dataset/3. Complete form-20260402T123223Z-1-001/3. Complete form/: Completed forms - Summary.docx
dataset/Prompt-20260402T123305Z-1-001/Prompt/: Tax Return Data - Prompt.docx  (+1 more)
reference_pack/: federal_computation.yaml  generator_config.yaml  mappings.yaml  sample_case.json  state_computation.yaml  validation_rules.yaml
specs/: dataset_structure_blueprint.yaml  irs_acroform_schedule_maps.yaml  reference_pack_contract.yaml
specs/sample_pack/: mappings.yaml  meta.yaml  sample_case.json  validation_rules.yaml
specs/templates/: manifest.yaml
src/taxweave_atlas/: __init__.py  __main__.py  cli.py  compute.py  config.py  config_loader.py  exceptions.py  generator.py  mapping.py  paths.py  pipeline.py  validate.py
templates/: manifest.yaml
tests/: test_complete_return_merge.py  test_cross_document_checks.py  test_delivery_batch.py  test_display_names.py  test_generation_tiers.py  test_irs_template_pdf.py  test_stratified_batch.py  test_structural_mef.py  test_supporting_form_policy.py
(+684 files in other folders)
